--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,13 +13,12 @@ dependency_overrides:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_sodium: ^0.2.0
-  sodium_libs: ^2.0.0
+  sodium_libs: ^2.1.1+3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
+  flutter_lints: ^2.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
